# cosmwasm-maci

./: .gitignore  README.md  format_cli_msg.py
maci/: Cargo.toml  README.md
maci/schema/: maci.json
maci/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_config.json  response_to_get_period.json  response_to_get_round_info.json  response_to_get_voting_time.json  response_to_grant_info.json  response_to_query_circuit_type.json  response_to_query_oracle_whitelist_config.json  response_to_white_info.json  response_to_white_list.json
maci/scripts/: index.ts
maci/src/: contract.rs  error.rs  groth16_parser.rs  lib.rs  msg.rs  plonk_parser.rs  state.rs  tests.rs  utils.rs
maci/src/multitest/: mod.rs  tests.rs
maci/src/test/: msg_test.json  result.json  tally_test.json  user_pubkey.json
maci/src/test/amaci_test/: logs.json
maci/src/test/plonk_test/: msg.json  tally.json
maci/src/test/qv_test/: msg.json  result.json  tally.json
maci/ts/: Maci.client.ts  Maci.types.ts  OracleMaci.client.ts  OracleMaci.types.ts
