[package]
name = "maci"
version = "0.1.0"
authors = ["feng"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0"
cw-storage-plus = "1.0.1"
cosmwasm-schema = "1.1.0"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }

thiserror = "1.0.31"

bellman-ce-verifier = { git = "https://github.com/DoraFactory/snarkjs-bellman-adapter.git", default-features = false, version = "0.1.0"}
hex = "0.4"
pairing_ce = { git = "https://github.com/VegeBun-csj/pairing.git" }
ff_ce = "0.14.3"

num-bigint = "0.4.3"
num-traits = "0.2"
sha256 = "1.1.3"
poseidon-rs = "0.0.10"
getrandom = { version = "0.2.9", features = ["js"] }

ff = {package="ff_ce" , version="0.11", features = ["derive"]}

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cw-multi-test = "0.16.2"
derivative = "2"
serde_json = "1.0"
num-bigint = "0.4.3"
num-traits = "0.2"
